# audio_conversation_databricks

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  alembic.ini  app.yaml  databricks.yml  pyproject.toml  requirements.txt  ruff.toml
.claude/agents/: code-reviewer.md  python-pro.md
.claude/skills/databricks-lineage/: SKILL.md
.claude/skills/databricks-workspace/: SKILL.md
.specify/memory/: constitution.md
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_error_message_column.py  003_add_transcript_chunks_table.py  20260105_124105_add_reconstructed_dialog_json_column_to_.py  20260105_124448_add_dialog_json_column_to_transcripts.py  20260113_091437_adding_processing_start_time.py  20260114_155906_adding_speaker_embeddings.py
docs/diagrams/: audio_rag_architecture.dot  audio_rag_architecture.xml  erd.dot  erd.xml
notebooks/: audio_diarization_pyfunc.py
resources/: data.app.yml  model.job.yml
scripts/: diarize.py
specs/001-audio-conversation-rag/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-diarized-transcript-viewer/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-multi-speaker-conversation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-speaker-embedding-matching/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-chat-streaming-responses/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: __init__.py  app.py  config.py
src/assets/: streaming.css
src/components/: __init__.py  chat.py  library.py  transcript.py  upload.py
src/db/: __init__.py  session.py
src/models/: __init__.py  recording.py  speaker_embedding.py  transcript.py  transcript_chunk.py
src/services/: __init__.py  audio.py  dialog_parser.py  embedding.py  rag.py  reconstruction.py  recording.py  streaming.py  transcript.py
tests/: conftest.py
tests/contract/: test_sse_contract.py
tests/integration/: test_db.py  test_diarization.py  test_multi_chunk_diarization.py  test_rag_agent.py  test_recording_delete.py  test_recording_detail.py  test_recording_pipeline_reconstruction.py  test_speaker_embedding_storage.py  test_sse_endpoint.py  test_transcript_navigation.py  test_vector_store.py
tests/unit/: test_audio.py  test_chat_recording_filter.py  test_embedding.py  test_rag.py  test_recording_management.py  test_speaker_embedding_model.py  test_speaker_styles.py  test_streaming.py  test_transcript_search.py
(+18 files in other folders)
